# melcloud-mqtt

./: .gitignore  LICENSE  README.md  melcloudmqtt.cfg.example.yaml  pyproject.toml
src/melcloudmqtt/: app.py  client.py  config.py  device.py
tests/: test_device.py
tests/data/: device_conf.json  property_values.cfg.yaml
